Added albums.get method
